2006-11-21  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Downgradaded pcre dependendy to 6.4.
	See #367827.

2006-11-20  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:

	lsb_release -s is not consistent among distros so
	we don't use it and instead parse the
	"description: value" lines.
	See #374090.

2006-11-20  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:

	Fixed computation of disk space.
	Changed label.
	Closes #??????.

2006-11-19  Benoît Dejean  <benoit@placenet.org>

	* src/memmaps.cpp:

	A little more C++.
	Added #if 0 code, attempt to rewrite tree save_state/get_state.

2006-11-19  Benoît Dejean  <benoit@placenet.org>

	* src/util.c (procman_debug):

	Added relative time since startup in output.

2006-11-18  Benoît Dejean  <benoit@placenet.org>

	* src/interface.c:

	Replaced libgnome by gtk+.

2006-11-18  Benoît Dejean  <benoit@placenet.org>

	* src/memmaps.cpp:

	Reworked to use lsb_release where available.
	Original patch by Deji Akingunola <dakingun@gmail.com>.
	See #374090.

2006-11-17  Benoît Dejean  <benoit@placenet.org>

	* src/memmaps.cpp:

	Reworked and simplified.
	Made maps addition faster.

2006-11-16  Benoît Dejean  <benoit@placenet.org>

	* src/memmaps.cpp:

	First attempt to rewrite some parts in C++.

2006-11-16  Benoît Dejean  <benoit@placenet.org>

	* renamed src/memmaps.c
	  to src/memmaps.cpp
	* patched src/Makefile.am
	* patched src/memmaps.cpp
	* patched src/memmaps.h:

	Converted memmaps to C++.

2006-11-14  Benoît Dejean  <benoit@placenet.org>

	* src/sysinfo.cpp:

	Added Fedora backend.
	Patch by Deji Akingunola <dakingun@gmail.com>.
	See bug #374090.

2006-11-13  Benoît Dejean  <benoit@placenet.org>

	* src/gnome-system-monitor.schemas.in:

	Fixed schema.
	Closes #163396.

2006-11-12  Benoît Dejean  <benoit@placenet.org>

	* configure.in:

	Bumped version number to 2.17.3.

2006-11-12  Benoît Dejean  <benoit@placenet.org>

	* src/proctable.c:

	Renamed the Arguments column as "Command Line".