@@ -69,10 +69,12 @@ static const GtkActionEntry menu_entries[] =
 	{ "Preferences", GTK_STOCK_PREFERENCES, N_("Prefere_nces"), NULL,
 	  N_("Configure the application"), G_CALLBACK (cb_edit_preferences) },
 
+#if 0
 	{ "HideProcess", NULL, N_("_Hide Process"), "<control>H",
 	  N_("Hide process from list"), G_CALLBACK (cb_hide_process) },
 	{ "HiddenProcesses", NULL, N_("_Hidden Processes"), "<control>P",
 	  N_("Open the list of currently hidden processes"), G_CALLBACK (cb_show_hidden_processes) },
+#endif
 	{ "MemoryMaps", NULL, N_("_Memory Maps"), "<control>M",
 	  N_("Open the memory maps associated with a process"), G_CALLBACK (cb_show_memory_maps) },
 	{ "OpenFiles", NULL, N_("Open _Files"), "<control>F",
@@ -127,9 +129,11 @@ static const char ui_info[] =
 "      <separator />"
 "      <menuitem name=\"ViewDependenciesMenu\" action=\"ShowDependencies\" />"
 "      <separator />"
+#if 0
 "      <menuitem name=\"ViewHideProcessMenu\" action=\"HideProcess\" />"
 "      <menuitem name=\"ViewHiddenProcessesMenu\" action=\"HiddenProcesses\" />"
 "      <separator />"
+#endif
 "      <menuitem name=\"ViewMemoryMapsMenu\" action=\"MemoryMaps\" />"
 "      <menuitem name=\"ViewOpenFilesMenu\" action=\"OpenFiles\" />"
 "    </menu>"
@@ -147,8 +151,10 @@ static const char ui_info[] =
 "    <separator />"
 "    <menuitem action=\"ChangePriority\" />"
 "    <separator />"
+#if 0
 "    <menuitem action=\"HideProcess\" />"
 "    <separator />"
+#endif
 "    <menuitem action=\"MemoryMaps\" />"
 "    <menuitem action=\"OpenFiles\" />"
 "  </popup>";
@@ -811,7 +817,9 @@ update_sensitivity(ProcData *data)
 						  "EndProcess",
 						  "KillProcess",
 						  "ChangePriority",
+#if 0
 						  "HideProcess",
+#endif
 						  "MemoryMaps",
 						  "OpenFiles" };
 
@@ -819,7 +827,10 @@ update_sensitivity(ProcData *data)
 						   "ShowAllProcesses",
 						   "ShowMyProcesses",
 						   "ShowDependencies",
-						   "HiddenProcesses" };
+#if 0
+						   "HiddenProcesses"
+#endif
+	};
 
 	size_t i;
 	gboolean processes_sensitivity, selected_sensitivity;
