@@ -1,3 +1,13 @@
+2006-12-03  Benoît Dejean  <benoit@placenet.org>
+
+	* src/favorites.c: (is_process_blacklisted):
+	* src/interface.c: (update_sensitivity):
+
+	Disabled the process blacklist.
+	I don't think somebody really uses this broken feature.
+	If you do, please tell me.
+	Evil plan is too replace it with a regex based filter.
+
 2006-11-21  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
